[tool.poetry]
authors = ["djkcyl <cyl@cyllive.cn>"]
description = ""
name = "abot-mahv2"
version = "2.15.0"

[tool.poetry.dependencies]
python = ">=3.9,<3.10"
azure-cognitiveservices-speech = "^1.20.0"
cos-python-sdk-v5 = "^1.9.15"
dnspython = "^2.2.1"
graiax-silkcoder = "^0.2.0"
httpx = "^0.22.0"
jionlp-py39 = "^1.3.45"
paddleocr = "^2.4.0"
paddlepaddle = "^2.2.2"
peewee = "^3.14.10"
playwright = "^1.20.1"
prettytable = "^3.0.0"
psutil = "^5.9.0"
pyacrcloud-patch = "^1.0.1"
pyyaml = "^6.0"
pyzbar = "^0.1.9"
qrcode = "^7.2"
rsa = "^4.7.2"
saucenao-api = "^2.4.0"
tencentcloud-sdk-python = "^3.0.565"
triangler-patch = "^0.1.3"
wordcloud = "^1.8.1"
xmltodict = "^0.12.0"
graia-ariadne = {extras = ["graia"], version = "^0.6.16"}
grpcio = "^1.45.0"
grpcio-status = "^1.45.0"
numba = "^0.55.1"
opencv-python = "4.4.0.46"
beanie = "^1.10.4"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]

[tool.poetry.dev-dependencies]
black = "^22.1.0"
devtools = "^0.8.0"
flake8 = "^4.0.1"
aio-mc-rcon = "^3.1.1"
ipython = "^8.0.1"

[[tool.poetry.source]]
default = true
name = "tsinghua"
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
